@@ -551,3 +551,18 @@ void PSG_ff8803_WriteByte(void)
 		}
 	}
 }
+
+
+/* ------------------------------------------------------------------
+ * YM-2149 register content dump (for debugger info command)
+ */
+void PSG_Info(Uint32 dummy)
+{
+	int i;
+
+	fprintf(stderr, "YM-2149 register contents:\n");
+	for(i = 0; i < ARRAYSIZE(PSGRegisters); i++)
+	{
+		fprintf(stderr, "Reg $%02X : $%02X\n", i, PSGRegisters[i]);
+	}
+}
